# reinforcement_game

./: .gitignore  CMakeLists.txt  README.md  pong.py
include/: Controller.h  ControllerDisk.h  PolicyNetwork.h  SimulatedDisk.h  defines.h  geometry.h  util.h
src/: Controller.cpp  ControllerDisk.cpp  PolicyNetwork.cpp  SimulatedDisk.cpp  main.cpp  pong.py
